# CGame

./: .clang-format  CMakeLists.txt  main.c
src/: main.c
